# named-subagents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINDINGS.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  demo.py  eval_resolution.py  pyproject.toml  test_hook.py  test_named_subagents.py
.github/workflows/: ci.yml  release.yml
docs/: COMMUNITY.md  RELEASING.md
examples/: demo.py
experiments/auto-namer-probe/: FEASIBILITY.md  probe-hook.py  settings-snippet.json
js/: .gitignore  cli.mjs  demo.mjs  named_subagents.d.ts  named_subagents.mjs  package.json  test_hook.mjs  test_named_subagents.mjs  tsconfig.json  types_test.ts
named_subagents/: __init__.py  __main__.py  cli.py  registry.json
scripts/: parity_check.sh  record-demo.sh
skill/named-fanout/: SKILL.md
tests/: eval_resolution.py  resolution_eval.json  test_hook.py  test_named_subagents.py
