[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "named-subagents"
version = "0.2.0"
description = "Themed, non-repeating nicknames for Claude Code subagents — a userspace port of Codex's nickname_candidates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Bobby-cell-commits"}]
keywords = [
    "claude-code",
    "subagents",
    "agents",
    "nicknames",
    "fan-out",
    "orchestration",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Bobby-cell-commits/named-subagents"
Repository = "https://github.com/Bobby-cell-commits/named-subagents"
Issues = "https://github.com/Bobby-cell-commits/named-subagents/issues"
Changelog = "https://github.com/Bobby-cell-commits/named-subagents/blob/master/CHANGELOG.md"

[project.scripts]
named-subagents = "named_subagents.cli:main"

[tool.setuptools]
packages = ["named_subagents"]

# Explicit table — the implicit include-package-data default can silently drop
# a JSON data file from the wheel.
[tool.setuptools.package-data]
named_subagents = ["registry.json"]
